# bpyth

./: .gitignore  README.ipynb  README.md  publish.ipynb  publish_bpyth.ipynb  pyproject.toml  zzdel_setup.py
jupyter/: 00_Test.ipynb  10_Files.ipynb  12_Files.ipynb  15_Human.ipynb  20_Iterable.ipynb  22_Object_Analysis.ipynb  24_Strings.ipynb  26_Tools.ipynb  98___blab_tools.ipynb  99___run_all.ipynb
jupyter/data/: lorem_ipsum.txt
jupyter/nb_out/: 10_Files.ipynb  15_Human.ipynb  20_Iterable.ipynb  22_Object_Analysis.ipynb  24_Strings.ipynb  98___blab_tools.ipynb  99___run_all.ipynb
