# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"



[project]
name            = "bpyth"
version         = "0.0.7"        

requires-python = ">=3.8"
dependencies    = []

authors        = [{ name = "djekra", email = "hopsalla@gmail.com" }]
description     = "Various Python Tools"
readme          = "README.md"
license         = {text = "MIT"}
classifiers     = [
                  "Programming Language :: Python :: 3",
                  "License :: OSI Approved :: MIT License",
                  "Operating System :: OS Independent",
]

#keywords       = ["one", "two"]
#dynamic        = ["version"]


[project.urls]
Homepage = "https://github.com/djekra/bpyth"


[tool.setuptools]
py-modules = ["bpyth"] 


#[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
bpyth = "bpyth.__main__:main"

